--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,22 +1,23 @@
 
 // special CFS div
 
-.left-red-border{
- width:60%;
-text-align: justify;
- height: 150px;
- border-left: 5px solid $color_bar_pink ;
-padding-left: 20px;
-padding-right: 10px;
-
-}
-
-.red-border-container{
- width: 80px;
- padding: 10px;
- overflow:visible;
-  height: auto;
-}
+// .left-red-border{
+//  width:60%;
+// text-align: justify;
+//  height: 150px;
+//  border-left: 5px solid $color_bar_pink ;
+//   overflow:visible;
+// padding-left: 20px;
+// padding-right: 10px;
+//
+// }
+//
+// .red-border-container{
+//  width: 80px;
+//  padding: 10px;
+//
+//   height: auto;
+// }
 
   //  <div class="cfsBorder">
   //  <div class="cfscontainer"> here will be text area <div>
