--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1282,6 +1282,7 @@ padding-bottom: 60px;
 .left-red-border {
   width: 80%;
   height: 90px;
+  overflow: visible;
   border-left: 7px solid #D93B57;
   padding-left: 20px;
   padding-right: 10px; }
@@ -1289,7 +1290,6 @@ padding-bottom: 60px;
 .red-border-container {
   width: 30rem;
   padding: 10px;
-  overflow: visible;
   height: auto;
   margin-bottom: 70px; }
 
@@ -1341,6 +1341,7 @@ site-main .involved-title green-btn {
 
 .nw-program-wrapper {
   max-width: 30rem;
+  height: auto;
   margin: 0 auto;
   padding-left: 1.25rem;
   padding-right: 0.9375rem;
@@ -1354,17 +1355,51 @@ site-main .involved-title green-btn {
     text-align: left;
     color: #000000; }
 
-.nw-program {
-  margin: auto; }
-  .nw-program .red-border-container {
-    width: 30rem;
-    padding: 10px;
-    overflow: visible;
-    height: auto;
-    margin-bottom: 70px; }
-    .nw-program .red-border-container .left-red-border {
-      width: 80%;
-      height: 90px;
-      border-left: 7px solid #D93B57;
-      padding-left: 20px;
-      padding-right: 10px; }
+.green-btn {
+  width: 60%;
+  height: 47px;
+  margin-left: 5%;
+  padding: 17px 20px;
+  background-color: #4FC8A1;
+  border-radius: 6px;
+  font-family: "Noto Sans";
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 30px;
+  color: #fff;
+  text-shadow: none;
+  letter-spacing: 0.8px; }
+
+.teacher-grid {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  position: relative; }
+  .teacher-grid .switch {
+    box-shadow: inset 1px 1px 40px 0 rgba(0, 0, 0, 0.45);
+    border-radius: 50%;
+    width: 125px;
+    height: 125px; }
+    .teacher-grid .switch .teacher-img {
+      background-size: cover;
+      position: relative;
+      border-radius: 50%;
+      width: 125px;
+      height: 125px;
+      background: #aff1d3; }
+    .teacher-grid .switch p {
+      border-radius: 50%;
+      top: 60px;
+      position: absolute;
+      width: 125px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      height: 125px;
+      text-align: center;
+      display: none; }
