--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -4,9 +4,9 @@ site-main{
      width: 480px;
      margin-left: auto;
      margin-right: auto;
-    
+
    }
-.involved-title{
+.a{
 green-btn{
        text-decoration: none;
        padding-left:19px;
@@ -20,66 +20,131 @@ green-btn{
        color:#000;
        background-color: #4FC8A1 ;
        font-family: "Noto Sans";
-       font-size: px;
+       font-size: 15px;
        font-weight: bold;
        text-align: center;
        line-height: 30px;
-       color: #000;
-       margin-left: 15px;
-       box-shadow: none;
-       font-weight: 300;
-       text-shadow: none;
-       display: block;
+       display:block;
+
+      //  margin-left: 15px;
+      //  box-shadow: none;
+      //  font-weight: 300;
+      //  text-shadow: none;
+      //  display: block;
      }
 
     }
  }
 
 
- // This is for past events
 
 
- .text-post{
-   border-top: 5px solid #248e6a;
-   width: 100px;
+ .text-shadow{
 
+border-top: 3px solid #248e6a;
 
-.site-main{
-    .involved-wrapper{
-      width: 480px;
-      margin-left: auto;
-      margin-right: auto;
-   
-    }
-
-    h1{
-      a{
-        
-        text-decoration: none;
-        padding-left:19px;
-        padding-right:36px;
-        padding-top: 25px;
-        padding-bottom: 19px;
-        width: 200px;
-        height: 120px;
-        font-size: 30px;
-        color:#000;
-        background-color: #4FC8A1;
-        font-family: "Noto Sans";
-        font-weight: bold;
-        text-align: center;
-        line-height: 30px;
-        margin-left: 15px;
-        box-shadow: none;
-        font-weight: 300;
-        text-shadow: none;
-        letter-spacing: .8px;
-        display: block;
-
-      }
-  }
-
+   width: 100%;
 }
 
+
+  .get_involved img {
+  float: left;
+  width: 227px;
+  height: 244px;
+  }
+
+
+
+// .p{
+//   display: flex;
+//   text-align: center;
+//   color:fff;
+//   width:150px;
+//   height:100;
+//     .enter_cercile{
+//     border-radius: 50%;
+//     background-color: #4FC8A1 ;
+//     border: 5px solid #4FC8A1 ;
+//
+//   }
+//
+// }
+.involved {
+  .green-btn
+      padding: 0;
+      padding-left:19px;
+      padding-right:25px;
+      padding-top: 20px;
+      padding-bottom: 19px;
+      font-size: 25px;
+      height: 200px;
+      display: flex;
+      -webkit-border-radius: 150%;
+      -moz-border-radius: 150%;
+      -ms-border-radius: 150%;
+      -o-border-radius: 150%;
+      border-radius: 150%;
+      background-color: #4fc8a1;
+      display:block;
+      width:200px;
+      text-align: center;
+      color:#fff;
+      text-align: center
+      }
  }
 
+ .involved {
+     .red-btn {
+         padding: 15px 40px;
+         background-color: #F76072;
+         border-radius: 6px;
+         color: #fff;
+
+        //  margin-left: 80px;
+         font-family: "Noto Sans";
+         font-size: 24px;
+         font-weight: 300;
+         text-shadow: none;
+         letter-spacing: 0.8px;
+         text-align: center;
+         display:inline;
+         line-height: inherit;
+         margin: 20px;
+         flex-direction:row;
+     }
+ }
+
+// .site-main{
+//     .involved-wrapper{
+//       width: 480px;
+//       margin-left: auto;
+//       margin-right: auto;
+//
+//     }
+
+  //   h1{
+  //     a{
+  //
+  //       text-decoration: none;
+  //       padding-left:19px;
+  //       padding-right:36px;
+  //       padding-top: 25px;
+  //       padding-bottom: 19px;
+  //       width: 200px;
+  //       height: 120px;
+  //       font-size: 30px;
+  //       color:#000;
+  //       background-color: #4FC8A1;
+  //       font-family: "Noto Sans";
+  //       font-weight: bold;
+  //       text-align: center;
+  //       line-height: 30px;
+  //       margin-left: 15px;
+  //       box-shadow: none;
+  //       font-weight: 300;
+  //       text-shadow: none;
+  //       letter-spacing: .8px;
+  //       display: block;
+  //
+  //     }
+  // }
