--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1295,7 +1295,7 @@ site-main .involved-wrapper {
   margin-left: auto;
   margin-right: auto; }
 
-site-main .involved-title green-btn {
+site-main .a green-btn {
   text-decoration: none;
   padding-left: 19px;
   padding-right: 36px;
@@ -1308,42 +1308,51 @@ site-main .involved-title green-btn {
   color: #000;
   background-color: #4FC8A1;
   font-family: "Noto Sans";
-  font-size: px;
+  font-size: 15px;
   font-weight: bold;
   text-align: center;
   line-height: 30px;
-  color: #000;
-  margin-left: 15px;
-  box-shadow: none;
-  font-weight: 300;
-  text-shadow: none;
   display: block; }
 
-.text-post {
-  border-top: 5px solid #248e6a;
-  width: 100px; }
-  .text-post .site-main .involved-wrapper {
-    width: 480px;
-    margin-left: auto;
-    margin-right: auto; }
-  .text-post .site-main h1 a {
-    text-decoration: none;
-    padding-left: 19px;
-    padding-right: 36px;
-    padding-top: 25px;
-    padding-bottom: 19px;
-    width: 200px;
-    height: 120px;
-    font-size: 30px;
-    color: #000;
-    background-color: #4FC8A1;
-    font-family: "Noto Sans";
-    font-weight: bold;
-    text-align: center;
-    line-height: 30px;
-    margin-left: 15px;
-    box-shadow: none;
-    font-weight: 300;
-    text-shadow: none;
-    letter-spacing: .8px;
-    display: block; }
+.text-shadow {
+  border-top: 3px solid #248e6a;
+  width: 100%; }
+
+.get_involved img {
+  float: left;
+  width: 227px;
+  height: 244px; }
+
+.involved .green-btn {
+  padding-left: 19px;
+  padding-right: 25px;
+  padding-top: 20px;
+  padding-bottom: 19px;
+  font-size: 25px;
+  height: 200px;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 150%;
+  background-color: #4fc8a1;
+  display: block;
+  width: 200px;
+  text-align: center;
+  color: #fff;
+  text-align: center; }
+
+.involved .red-btn {
+  padding: 15px 40px;
+  background-color: #F76072;
+  border-radius: 6px;
+  color: #fff;
+  font-family: "Noto Sans";
+  font-size: 24px;
+  font-weight: 300;
+  text-shadow: none;
+  letter-spacing: 0.8px;
+  text-align: center;
+  display: inline;
+  line-height: inherit;
+  margin: 20px;
+  -ms-flex-direction: row;
+      flex-direction: row; }
