fexid left red border and styling wn program page rolling section

--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -44,21 +44,11 @@
 	}
 }
 
-.left-red-border {
-	width: 80%;
-	height: 90px;
-	overflow: visible;
-	border-left: 7px solid $color_bar_pink;
-	padding-left: 20px;
-	padding-right: 10px;
-}
 
-.red-border-container {
-	width: $mobile_width;
-	padding: 10px;
+.about-school{
+	margin: 0px;
 
-	height: auto;
-	margin-bottom: 70px;
+
 }
 // 		.largImg {
 //         width: 100%;
