--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -27,32 +27,34 @@
 //Enrollment Section
 .enroll{
 	margin: 2px;
+			.enroll-block{
+				max-width: 70%;
+				display: flex;
+				justify-content: space-around;
+				margin: 40px auto;
+				flex-direction: column;
+				   .enroll-img{
+						 margin-bottom: 50px;
+					 }
+							.green-btn {
+								height: 47px;
+								display: inline-block;
+								box-sizing: border-box;
+								text-align: center;
+								background-color: #4FC8A1;
+								border-radius: 6px;
+								font-family: "Noto Sans";
+								font-size: 15px;
+								font-weight: bold;
+								text-align: center;
+								line-height: 30px;
+								color: #fff;
+								text-shadow: none;
+								letter-spacing: 0.8px;
+							  }
 
-
-.enroll-block{
-	width: 60%;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	margin: 10px auto;
-	flex-direction: column;
-	.green-btn {
-		height: 47px;
-		padding: 17px 20px;
-		background-color: #4FC8A1;
-		border-radius: 6px;
-		font-family: "Noto Sans";
-		font-size: 15px;
-		font-weight: bold;
-		text-align: center;
-		line-height: 30px;
-		color: #fff;
-		text-shadow: none;
-		letter-spacing: 0.8px;
-	}
-
-}
-}
+			    }
+   }
 //teacher list Section
 .teacher-grid{
 
