--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1296,19 +1296,8 @@ body {
     padding: 0.625rem;
     display: none; }
 
-.left-red-border {
-  width: 80%;
-  height: 90px;
-  overflow: visible;
-  border-left: 7px solid #D93B57;
-  padding-left: 20px;
-  padding-right: 10px; }
-
-.red-border-container {
-  width: 30rem;
-  padding: 10px;
-  height: auto;
-  margin-bottom: 70px; }
+.about-school {
+  margin: 0px; }
 
 site-main .involved-wrapper {
   width: 480px;
@@ -1375,19 +1364,21 @@ site-main .involved-title green-btn {
 .enroll {
   margin: 2px; }
   .enroll .enroll-block {
-    width: 60%;
+    max-width: 70%;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-align: center;
-        align-items: center;
     -ms-flex-pack: distribute;
         justify-content: space-around;
-    margin: 10px auto;
+    margin: 40px auto;
     -ms-flex-direction: column;
         flex-direction: column; }
+    .enroll .enroll-block .enroll-img {
+      margin-bottom: 50px; }
     .enroll .enroll-block .green-btn {
       height: 47px;
-      padding: 17px 20px;
+      display: inline-block;
+      box-sizing: border-box;
+      text-align: center;
       background-color: #4FC8A1;
       border-radius: 6px;
       font-family: "Noto Sans";
@@ -1456,6 +1447,15 @@ site-main .involved-title green-btn {
   text-align: center; }
   .teacher-grid .teacher_det p {
     font-size: 50%; }
+
+.red-border-container {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 100px;
+  margin-left: 30px;
+  padding-left: 15px;
+  border-left: 7px solid #D93B57;
+  overflow: visible; }
 
 .mob-container {
   overflow-x: hidden;
