--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -23,7 +23,7 @@ $color_text-screen:#21759b;
 /********* Colours **********/
 
 //Montessori Brand Colours//
-
+$border_left_red: #D93B57;
 $color_btn_orange: #F76072 ;
 $color_btn_hover_pink: #CB203E ;
 $color_btn_green: #4FC8A1 ;
