--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -6,11 +6,14 @@
 
 
  margin: 0 auto;
-
-    img{
+.history-img{
    float:left;
-        width:190px;
-        height:190px;
+   width:190px;
+   height:219px;
+   img{
+     width: 100%;height: 100%;
+     
+   }
     }
     p{
 padding-top: 4px;
@@ -23,12 +26,15 @@ padding-top: 4px;
 ////************philosophy Section ************/////
 
 .main-philosophy{
-      margin: 0 auto;
-  max-width: 650px;
+      margin: 100px auto;
+  max-width:90%;
+  height: auto;
     @include flex(center,space-around);
     flex-wrap: wrap;
         position: relative;
         @include desktop{ max-width: 950px; height: 640px;
+        }
+          div{width:100%;
 }
 .philosophy-grid{
   display: -ms-flexbox;
