--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -763,7 +763,7 @@ div .secondary {
   @media (min-width: 60rem) {
     .site-main .home-wrapper .home-img {
       background-color: rgba(0, 0, 0, 0.74);
-      width: 1264px;
+      width: 100px;
       height: 555px;
       z-index: -1;
       position: absolute; } }
@@ -1102,18 +1102,22 @@ body {
 --------------------------------------------------------------*/
 .main-history {
   margin: 0 auto; }
-  .main-history img {
+  .main-history .history-img {
     float: left;
     width: 190px;
-    height: 190px; }
+    height: 219px; }
+    .main-history .history-img img {
+      width: 100%;
+      height: 100%; }
   .main-history p {
     padding-top: 4px;
     text-align: left;
     display: block; }
 
 .main-philosophy {
-  margin: 0 auto;
-  max-width: 650px;
+  margin: 100px auto;
+  max-width: 90%;
+  height: auto;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
@@ -1127,6 +1131,8 @@ body {
     .main-philosophy {
       max-width: 950px;
       height: 640px; } }
+  .main-philosophy div {
+    width: 100%; }
   .main-philosophy .philosophy-grid {
     display: -ms-flexbox;
     display: flex;
@@ -1485,7 +1491,30 @@ site-main .a green-btn {
   .teacher-grid .teacher_det p {
     font-size: 50%; }
 
+.red-border-q {
+  width: 87%;
+  top: 10px;
+  margin: 0 30px;
+  padding-left: 25px;
+  display: inline-block;
+  position: relative;
+  font-size: 1.1rem;
+  font-weight: bold; }
+  .red-border-q p {
+    margin: 0; }
+
+.red-border-q ::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 5PX;
+  left: 0PX;
+  height: 100%;
+  border-left: solid 8px #D93B57; }
+
 .mob-container {
   overflow-x: hidden;
   max-width: 30rem;
-  margin: 0 auto; }
+  margin: 0px auto;
+  padding: 40px 0;
+  border-bottom: solid 2px #4FC8A1; }
