--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,9 +1,10 @@
 .red-border-container{
-width: 100%;
+width: 95%;
 height: 100px;
+display: inline-block;
 margin-bottom: 100px;
-margin-left: 30px;
-padding-left:15px;
+margin-left: 5%;
+padding-left: 15px;
 border-left: 7px solid $border_left_red;
 overflow:visible;
 }
