--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -7,6 +7,7 @@
 	box-sizing: border-box;
 }
 // @media screen and (max-width: 480px) {
+
 .nw-program-wrapper {
 	max-width: $mobile_width;
 	height: auto;
@@ -15,7 +16,6 @@
 	padding-right: $basic_pading * 1.5;
 	align-items: center;
 	background-color: green;
-
 
 	h1 {
 		font-family: $font_title;
@@ -27,138 +27,153 @@
 	}
 }
 // Section Why NW Program Section
-.nw-program{
+
+.nw-program {
 	display: flex;
 	flex-direction: column;
 
-			.why-nw{
-							display:inline-block;
-							   .nw-img{
-											display:flex;
-											justify-content: center;
-											margin-bottom: 50px;
-								 }
-					    }
-		     }
+	.why-nw {
+		display: inline-block;
 
-//Enrollment Section
-.enroll{
-	width: 100%;
-			.enroll-block{
-				max-width: 70%;
-				display: flex;
-				justify-content: space-around;
-				margin: 40px auto;
-				flex-direction: column;
-				   .enroll-img{
-						 margin-bottom: 50px;
-					 }
-							.green-btn {
-								height: 47px;
-								display: inline-block;
-								box-sizing: border-box;
-								text-align: center;
-								background-color: #4FC8A1;
-								border-radius: 6px;
-								font-family: "Noto Sans";
-								font-size: 15px;
-								font-weight: bold;
-								text-align: center;
-								line-height: 30px;
-								color: #fff;
-								text-shadow: none;
-								letter-spacing: 0.8px;
-							  }
+		.nw-img {
+			display: flex;
+			justify-content: center;
+			margin-bottom: 50px;
+		}
+	}
+}
 
-			    }
-   }
-//teacher list Section
-.teacher-grid{
+// Funding Section
 
-	.flip-container {
+.funding {
 	display: flex;
- 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45);
-   background: #aff1d3;
-   border-radius:50%;
+	flex-direction: column;
+		.funding-img {
+			display: flex;
+			justify-content: center;
+			margin-bottom: 50px;
+			img{
+				width: 85%;
+			}
 
- }
-
- 	.flip-container:hover .flipper,
-   .flip-container.hover .flipper {
- 		-webkit-transform: rotateY(180deg);
- 		-moz-transform: rotateY(180deg);
- 		transform: rotateY(180deg);
- 	}
-
- .flip-container, .front, .back {
- 	width: 125px;
- 	height: 125px;
- }
-
- .flipper {
- 	flex: 1 0 auto;
- 	display: flex;
-
- 	 width: 50%;
-   position: relative;
- 	-webkit-transition: 1.9s;
- 	-webkit-transform-style: preserve-3d;
-
- 	-moz-transition: 1.9s;
- 	-moz-transform-style: preserve-3d;
-
- 	transition: 1.9s;
- 	transform-style: preserve-3d;
-
- }
-
- .front, .back {
- 	-webkit-backface-visibility: hidden;
- 	-moz-backface-visibility: hidden;
- 	backface-visibility: hidden;
-
- }
-
- .front {
- 	position: absolute;
-   background-size:cover;
-   border-radius:50%;
-	 flex: 2;
-
- }
-
-
- .back {
- 	-webkit-transform: rotateY(180deg);
- 	-moz-transform: rotateY(180deg);
- 	transform: rotateY(180deg);
-
- }
-
- .back {
- 		border-radius: 50%;
- 		position: absolute;
- 		width: 125px;
- 		overflow: hidden;
- 		text-overflow: ellipsis;
- 		height: 125px;
- 		text-align: center;
-   right:3px;
- }
-.teacher_det{
- 		 text-align: center;
-
- 	 	p{
- 	 		font-size: 50%;
- 	 	}
- }
-
- }
+		}
+		.funding-btn{
+			width: 40%;
+			display: flex;
+			align-items: center;
+		}
+}
 
 //Enrollment Section
+.enroll {
+	width: 100%;
 
+	.enroll-block {
+		max-width: 70%;
+		display: flex;
+		justify-content: space-around;
+		margin: 40px auto;
+		flex-direction: column;
 
+		.enroll-img {
+			margin-bottom: 50px;
+		}
 
+		.green-btn {
+			height: 47px;
+			display: inline-block;
+			box-sizing: border-box;
+			text-align: center;
+			background-color: #4FC8A1;
+			border-radius: 6px;
+			font-family: "Noto Sans";
+			font-size: 15px;
+			font-weight: bold;
+			text-align: center;
+			line-height: 30px;
+			color: #fff;
+			text-shadow: none;
+			letter-spacing: 0.8px;
+		}
+	}
+}
+//teacher list Section
+
+.teacher-grid {
+	.flip-container {
+		display: flex;
+		box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
+		background: #aff1d3;
+		border-radius: 50%;
+	}
+
+	.flip-container.hover .flipper,
+	.flip-container:hover .flipper {
+		-webkit-transform: rotateY(180deg);
+		-moz-transform: rotateY(180deg);
+		transform: rotateY(180deg);
+	}
+
+	.back,
+	.flip-container,
+	.front {
+		width: 125px;
+		height: 125px;
+	}
+
+	.flipper {
+		flex: 1 0 auto;
+		display: flex;
+		width: 50%;
+		position: relative;
+		-webkit-transition: 1.9s;
+		-webkit-transform-style: preserve-3d;
+		-moz-transition: 1.9s;
+		-moz-transform-style: preserve-3d;
+		transition: 1.9s;
+		transform-style: preserve-3d;
+	}
+
+	.back,
+	.front {
+		-webkit-backface-visibility: hidden;
+		-moz-backface-visibility: hidden;
+		backface-visibility: hidden;
+	}
+
+	.front {
+		position: absolute;
+		background-size: cover;
+		border-radius: 50%;
+		flex: 2;
+	}
+
+	.back {
+		-webkit-transform: rotateY(180deg);
+		-moz-transform: rotateY(180deg);
+		transform: rotateY(180deg);
+	}
+
+	.back {
+		border-radius: 50%;
+		position: absolute;
+		width: 125px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		height: 125px;
+		text-align: center;
+		right: 3px;
+	}
+
+	.teacher_det {
+		text-align: center;
+
+		p {
+			font-size: 50%;
+		}
+	}
+}
+//Enrollment Section
 // .teacher-grid{
 // 	// @include flex(center,space-around);
 // 	// flex-wrap: wrap;
@@ -187,14 +202,14 @@
 // 	}
 //
 // 	p {
-		// border-radius: 50%;
-		// top: 60px;
-		// position: absolute;
-		// width: 125px;
-		// overflow: hidden;
-		// text-overflow: ellipsis;
-		// height: 125px;
-		// text-align: center;
+// border-radius: 50%;
+// top: 60px;
+// position: absolute;
+// width: 125px;
+// overflow: hidden;
+// text-overflow: ellipsis;
+// height: 125px;
+// text-align: center;
 // 		display: none;
 // 	}
 //
